.snakemake/log/2022-06-01T150842.865531.snakemake.log
Full Traceback (most recent call last):
  File "/opt/miniconda3/envs/snakemake/lib/python3.10/site-packages/snakemake/__init__.py", line 593, in snakemake
    workflow.include(
  File "/opt/miniconda3/envs/snakemake/lib/python3.10/site-packages/snakemake/workflow.py", line 1182, in include
    exec(compile(code, snakefile.get_path_or_uri(), "exec"), self.globals)
  File "/home/jeszyman/repos/cfdna-cna/workflow/cfdna_wgs_cna.smk", line 112
    )
    ^
SyntaxError: positional argument follows keyword argument

SyntaxError in line 112 of /home/jeszyman/repos/cfdna-cna/workflow/cfdna_wgs_cna.smk:
positional argument follows keyword argument (cfdna_wgs_cna.smk, line 112)
